@@ -264,9 +264,11 @@ pod/Prima/tutorial/menu2.gif
 pod/Prima/tutorial/menu3.gif
 pod/Prima/tutorial.pod
 pod/Prima/types.pod
+pod/Prima/Widget/date.gif
 pod/Prima/Widget/pack.pod
 pod/Prima/Widget/place.pod
 pod/Prima/Widget/link.gif
+pod/Prima/Widget/time.gif
 pod/Prima/Widget.pod
 pod/Prima/windings.gif
 pod/Prima/Window.pod
