@@ -5,6 +5,7 @@ Revision history for Perl module Prima
  - Add sys::GUIException, onDie, and a standard dialog for user interactions on exceptions
  - Widget.onMouseClick.dblclick::bool is .nth::int now, can report triple, quadruple etc clicks
  - Support fillPattern with tiles in the emulated antialiasing
+ - Add Date and Time widgets (and their example/clock.pl)
 
 1.67 2022-11-27
  - Links and tooltips extended functionality:
